--- a/style.css
+++ b/style.css
@@ -9,10 +9,15 @@ body{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
+
 .navigation{
     width: 95%;
     margin: 5px auto;
     align-items: center;
+}
+
+nav .responsive-links{
+    display: none;
 }
 
 nav{
@@ -40,6 +45,11 @@ nav .links ul li a{
     font-weight: 500;
 }
 
+nav .links ul li a:hover{
+    border-bottom: 2px solid black;
+    padding-bottom: 5px;
+}
+
 nav .Shop-Now{
     height: 40px;
     width: 130px;
@@ -47,12 +57,12 @@ nav .Shop-Now{
     border: none;
     background-color: rgb(0, 0, 0);
     cursor: pointer;
-    transition: 0.3s;
+    transition: 0.3s ease-in-out;
 }
 
 nav .Shop-Now:hover{
-    background-color: rgb(95, 95, 95);
-
+    background-color: rgb(59, 59, 59);
+    transform: scale(1.1);
 }
 
 nav .Shop-Now a{
@@ -147,6 +157,13 @@ nav .Shop-Now a{
     width: 290px;
     background-color: rgb(46, 40, 40);
     border-radius: 15px;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+}
+
+.Products-cards .card:hover {
+    transform: scale(0.97);
+    box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.9);
 }
 
 .Products-cards .card .card-pic{
@@ -352,4 +369,124 @@ footer .quick-links{
     padding: 10px;
     background-color: rgb(0, 0, 0);
     color: white;
+}
+
+@media screen and (max-width: 500px){
+
+    .continaire{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    nav .links ul{
+        display: none;
+    }
+
+    nav .responsive-links{
+        display: block;
+    }
+
+    nav .responsive-links ul{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        list-style-type: none;
+    }
+
+    nav .responsive-links ul li{
+        margin: 10px 0;
+    }
+
+    nav .responsive-links ul li a{
+        text-decoration: none;
+        color: black;
+        font-weight: 500;
+    }
+
+    nav .Shop-Now{
+        height: 40px;
+        width: 130px;
+        border-radius: 30px;
+        border: none;
+        background-color: rgb(0, 0, 0);
+        cursor: pointer;
+        transition: 0.3s;
+    }
+
+    nav .Shop-Now:hover{
+        background-color: rgb(95, 95, 95);
+    
+    }
+
+    nav .Shop-Now a{
+        color: white;
+        font-size: medium;
+        font-weight: bold;
+        text-decoration: none;
+    
+    }
+
+    .side-bar{
+        width: 95%;
+        display: flex;
+        flex-direction: column;
+        margin: 30px 20px;
+    }
+
+    .side-bar .image{
+        width: 100%;
+        height: 100%;
+    }
+
+    .side-bar .side-bar_pic{
+        width: 100%;
+        height: 80vh;
+        border-radius: 10px;
+    }
+
+    .side-bar .info{
+        width: 100%;
+        height: 100%;
+        padding: 10px;
+        margin-left: 0;
+    }
+
+    .side-bar h1{
+        font-size: 50px;
+    }
+
+    .side-bar p{
+        margin-top: 10px;
+    }
+
+    .Photo-bar{
+        width: 95%;
+        margin: 20px auto;
+        display: flex;
+        flex-direction: column;
+        
+    }
+
+    .Photo-bar .pic{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        gap: 5px;
+    }
+
+    .Photo-bar .pic .img-1{
+        width: 100%;
+        height: 500px;
+        border-radius: 5px;
+    }
+
+    .Photo-bar .pic .img-2{
+        width: 100%;
+        height: 500px;
+        border-radius: 5px;
+    
+    }
+    
 }
